# cookiecutter-pyservice

./: .gitignore  .pre-commit-config.yaml  cookiecutter.json  tox.ini
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dev.Dockerfile  docker-compose.yml  justfile  mypy.ini  pyproject.toml  settings.py  tox.ini
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/src/: main.py  manage.py  settings.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/src/jobs/: celery.py  tasks.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/src/models/: health.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/src/routers/: health_router.py
