[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name.replace("\"", "\\\"") }} <{{ cookiecutter.email }}>"]
readme = "README.rst"
keywords = ["{{ cookiecutter.project_slug }}"]
packages = [
    { include = "{{cookiecutter.module_name}}", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
pylint = "^2.15.0"
pre-commit = "^2.20.0"
isort = "^5.10.1"
mypy = "^0.971"
pydocstyle = "^6.1.1"
ipykernel = "^6.15.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

