[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.full_name.replace("\"", "\\\"") }} <{{ cookiecutter.email }}>"]
readme = "README.md"
keywords = ["{{ cookiecutter.project_slug }}"]

[tool.poetry.dependencies]
python = "^{{cookiecutter.python_version}}"
fastapi = "*"
gunicorn = "*"
uvicorn = "*"
httpx = "*"
typer = "*"
rich = "*"
shellingham = "*"
celery = "*"
redis = "*"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
pylint = "*"
pre-commit = "*"
isort = "*"
mypy = "*"
pydocstyle = "*"
ipykernel = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

